--- a/Connect Four/Connect Four.csproj
+++ b/Connect Four/Connect Four.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mono.Nat">
+      <HintPath>..\Mono.Nat.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -65,6 +68,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CoinTosser.cs" />
+    <Compile Include="Connection.cs" />
     <Compile Include="GameGrid.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
