--- a/Connect Four/App.config
+++ b/Connect Four/App.config
@@ -1,6 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Connect_Four.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Connect_Four.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <applicationSettings>
+        <Connect_Four.Properties.Settings>
+            <setting name="IP_Seed" serializeAs="String">
+                <value>Vivamus faucibus sapien ex. id ultricies lacus tincidunt nullam.</value>
+            </setting>
+            <setting name="AvdertizementPort" serializeAs="String">
+                <value>8995</value>
+            </setting>
+        </Connect_Four.Properties.Settings>
+    </applicationSettings>
+    <userSettings>
+        <Connect_Four.Properties.Settings>
+            <setting name="GamePort" serializeAs="String">
+                <value>8994</value>
+            </setting>
+        </Connect_Four.Properties.Settings>
+    </userSettings>
 </configuration>
