--- a/Connect Four/Properties/Settings.settings
+++ b/Connect Four/Properties/Settings.settings
@@ -1,7 +1,15 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Connect_Four.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="IP_Seed" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Vivamus faucibus sapien ex. id ultricies lacus tincidunt nullam.</Value>
+    </Setting>
+    <Setting Name="AvdertizementPort" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">8995</Value>
+    </Setting>
+    <Setting Name="GamePort" Type="System.String" Scope="User">
+      <Value Profile="(Default)">8994</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
