moving used ports to the settings file

--- a/Connect Four/App.config
+++ b/Connect Four/App.config
@@ -10,14 +10,14 @@
     </startup>
     <applicationSettings>
         <Connect_Four.Properties.Settings>
-            <setting name="AvdertizementPort" serializeAs="String">
-                <value>8995</value>
+            <setting name="AdvertizeTcp" serializeAs="String">
+                <value>2385</value>
             </setting>
-            <setting name="GamePort" serializeAs="String">
-                <value>8994</value>
+            <setting name="GameTcp" serializeAs="String">
+                <value>2386</value>
             </setting>
-            <setting name="BroadcastPort" serializeAs="String">
-                <value>8996</value>
+            <setting name="AdvertizeUdp" serializeAs="String">
+                <value>2387</value>
             </setting>
         </Connect_Four.Properties.Settings>
     </applicationSettings>
