added game overlay with chat and unimplemented exit & save and exit

--- a/Connect Four/Connect Four.csproj
+++ b/Connect Four/Connect Four.csproj
@@ -71,12 +71,19 @@
     <Compile Include="ConnectionView.xaml.cs">
       <DependentUpon>ConnectionView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GameOverlay.xaml.cs">
+      <DependentUpon>GameOverlay.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs" />
     <Page Include="ConnectGame.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ConnectionView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GameOverlay.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
