Added saving and loading buttons/pages

--- a/Connect Four/Connect Four.csproj
+++ b/Connect Four/Connect Four.csproj
@@ -71,6 +71,10 @@
     <Compile Include="ConnectionView.xaml.cs">
       <DependentUpon>ConnectionView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="LoadGame.xaml.cs">
+      <DependentUpon>LoadGame.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SaveableList.cs" />
     <Compile Include="GameOverlay.xaml.cs">
       <DependentUpon>GameOverlay.xaml</DependentUpon>
     </Compile>
@@ -84,6 +88,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="GameOverlay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="LoadGame.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
