--- a/Connect Four/Connect Four.csproj
+++ b/Connect Four/Connect Four.csproj
@@ -65,6 +65,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AI.cs" />
+    <Compile Include="AskSaveName.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AskSaveName.Designer.cs">
+      <DependentUpon>AskSaveName.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConnectGame.xaml.cs">
       <DependentUpon>ConnectGame.xaml</DependentUpon>
     </Compile>
@@ -77,6 +84,9 @@
     <Compile Include="SaveableList.cs" />
     <Compile Include="GameOverlay.xaml.cs">
       <DependentUpon>GameOverlay.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SaveView.xaml.cs">
+      <DependentUpon>SaveView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Settings.cs" />
     <Page Include="ConnectGame.xaml">
@@ -110,6 +120,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SaveView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -125,6 +139,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="AskSaveName.resx">
+      <DependentUpon>AskSaveName.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
