--- a/Connect Four/Connect Four.csproj
+++ b/Connect Four/Connect Four.csproj
@@ -158,6 +158,9 @@
     <Content Include="Images\coin_red.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\coin_gold.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\coin_blue.png">
