--- a/Tester/Tester.csproj
+++ b/Tester/Tester.csproj
@@ -47,15 +47,18 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.3.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinarySearchTreeTests.cs" />
-    <Compile Include="ConnectionTester.cs" />
-    <Compile Include="GameTester.cs" />
-    <Compile Include="MainWindowTester.cs" />
+    <Compile Include="HashMapTests.cs" />
+    <Compile Include="JsonConvertTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SavableListTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
